single cell movement with recursion logic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="mainbox">
     <div id="snake">
-      
+      <div class="snake-body"></div>
     </div>
     <div id="fruit"></div>
   </div>
